psp-migration-cel/restrict-runtimeClassName/.chainsaw-test/bad-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: restrict-runtimeclassname
spec:
  runtimeClassName: fooclass
  containers:
  - name: container01
    image: dummyimagename
