psp-migration-cel/restrict-runtimeClassName/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restrict-runtimeclassname
