psp-migration-cel/restrict-runtimeClassName/.chainsaw-test/runtimeclass-exp.yaml
apiVersion: node.k8s.io/v1
handler: expconfig
kind: RuntimeClass
metadata:
  name: expclass
