psp-migration-cel/restrict-runtimeClassName/.chainsaw-test/runtimeclass-foo.yaml
apiVersion: node.k8s.io/v1
handler: fooconfig
kind: RuntimeClass
metadata:
  name: fooclass
