psp-migration-cel/restrict-runtimeClassName/.chainsaw-test/runtimeclass-prod.yaml
apiVersion: node.k8s.io/v1
handler: prodconfig
kind: RuntimeClass
metadata:
  name: prodclass
