psp-migration-cel/restrict-runtimeClassName/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-runtimeclassname
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: ../restrict-runtimeClassName.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-runtimeclass
          spec:
            validationFailureAction: Enforce
  - name: step-01
    try:
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: runtimeclass-prod.yaml
    - apply:
        file: runtimeclass-exp.yaml
    - apply:
        file: runtimeclass-foo.yaml
  - name: step-03
    try:
    - apply:
        file: good-pods.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pods.yaml
